# spider_crab

./: Cargo.toml  README.md
benches/: html_parser.rs
src/: cli.rs  client.rs  client_middleware.rs  crawler.rs  lib.rs  main.rs  parser.rs
tests/: crawler.rs  middleware.rs
tests/test_data/monzo/: home.html
