[package]
name = "monzo_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "4.0.0"
reqwest = { version = "0.12.5", features = ["brotli", "deflate", "gzip", "zstd"] }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
reqwest-tracing = "0.5.2"
scraper = "0.20.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
debug = true

[[bench]]
name = "html_parser"
harness = false
