[package]
name = "monzo_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
http = "1.1.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
owo-colors = "4.0.0"
reqwest = { version = "0.12.5", features = ["brotli", "deflate", "gzip", "zstd"] }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
reqwest-tracing = "0.5.2"
scraper = "0.20.0"
texting_robots = "0.2.2"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
url = "2.5.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing-test = "0.2.5"
wiremock = "0.6.1"

[profile.bench]
debug = true

[[bench]]
name = "html_parser"
harness = false
